--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.6.2",
     "classnames": "^2.3.1",
     "react": "^18.0.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0"
   },
