--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.0.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
